portfolio.css
/*
	Theme
*/

body {
	font-family: 'Ubuntu', sans-serif;
	position: relative;
}

.primary {
	background-color: #00796b;
	color: #ffffff;
}
.light-primary {
	background-color: #b2dfdb;
	color: #212121;
}
.alt-colors {
	background-color: #e6e6e6;
}

/*
	Navigation
*/

.navbar {
	border-radius: 0;
	margin-bottom: 0;
	background-color: white;
}
.navbar > * {
	max-width: 1150px;
}
.anchor {
	visibility: hidden;

	margin-top: -40px;
	padding-top: 40px;
}
.navbar-brand > a, .navbar-brand > a:visited, .navbar-brand > a:hover, .navbar-brand > a:active {
	color: inherit;
	text-decoration: none;
}

/*
	Headers
*/
.header {
	display: flex;
	flex-direction: row;
	align-items: center;
	text-align: center;
	margin-top: 50px;
	padding-top: 50px;
	margin-bottom: 60px;
}
.header > hr {
	flex:1;
	margin: 20px;

	border-color: #212121;
	color: #212121; /* old IE */
	background-color: #212121; /* Modern Browsers */
}
.title > hr {
	/* src:http://stackoverflow.com/questions/4151743/how-i-change-the-thickness-of-my-hr-tag */
	border: none;
	height: 3px;
}

/*--------------------------------------------------
	Sections
--------------------------------------------------*/

/*
	Top banner
*/
.navbar-toggle > * {
	background-color: #00796b;
}
#s-me {
	background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
		url(http://romorin.com/img/keyboard-hero.jpg);
	background-size:cover;
	background-position:bottom center;
	background-attachment:fixed;
}
.hero {
	text-align:center;
	position:relative;
	width: 100%;
	height: 500px;
}
.my-name {
	position: absolute;
	font-size: 60px;
	bottom: 120px;
	width: 100%;
	color: #ffffff;
}
.my-title {
	position: absolute;
	font-size: 40px;
	bottom: 50px;
	width: 100%;
	color: #ffffff;
}

/*
	Summary
*/
#s-summary {
	padding: 40px;
	width: 100%;
}
#s-summary > img {
	margin: 30px auto;
	width: 222px;
	border-radius: 50%;

	-moz-box-shadow:    3px 3px 5px 6px #065;
	-webkit-box-shadow: 3px 3px 5px 6px #065;
	box-shadow:         3px 3px 5px 6px #065;
}
#s-summary > p {
	text-align: center;
	width: 100%;
	font-size: 20px;
}

/*
	Projects
*/
.project {
	margin: 4%;
	position: relative;

	-moz-box-shadow:    3px 3px 5px 6px #ccc;
	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
	box-shadow:         3px 3px 5px 6px #ccc;
}
.project figcaption {
	text-align: center;
	color: white;

	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	width : 100%;
	padding: 10px 0;

	z-index: 2;
}
.is-hidden {
	display: none;
}
.blurry {
	background-color: rgba(21,21,21,0.7);
	position: absolute;
	height: 100%;
	width: 100%;
	left: 0;
	top: 0;

	z-index: 1;
}
.link-line {
	font-size: 30px;
	margin-top: 10px;
}
.link-line > a {
	padding: 10px;
	text-decoration: none;
}
.link-line > a:link {
	color: powderblue;
}
.link-line > a:active {
	color: yellow;
}
.link-line > a:visited {
	color: pink;
}
.link-line > a:hover {
	color: red;
}

/*
	Tech / Contact
	Todo with absolute bottom positionning
*/
.tech-category {
	position: relative;
	text-align: center;
	min-height: 300px;
}
.tech-category > * {
	margin: 20px 10%;
}
.tech-category > hr {
	margin-left: 30%;
	margin-right: 30%;

	border-color: #212121;
	color: #212121; /* old IE */
	background-color: #212121; /* Modern Browsers */
}

.tech-icons {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	align-content: center;
	min-height: 130px;
}
.tech-icons > * {
	margin: 10px;
}
.tech-icons span {
	font-size: 50px;
}
.tech-icons img {
	width: 50px;
	height: auto;
}
.tech-icons > a, .tech-icons > a:visited, .tech-icons > a:hover, .tech-icons > a:active {
	color: inherit;
	text-decoration: none;
}

/*
	Credits section
*/

.credits-text {
	text-align: center;
}
.legalese {
	font-size: 12px;
}

/*
	Links
*/
.outer-link:link {
	color: blue;
	text-decoration: underline;
}
.outer-link:active {
	color: orange;
	text-decoration: underline;
}
.outer-link:visited {
	color: purple;
	text-decoration: underline;
}
.outer-link:hover {
	color: red;
	text-decoration: none;
}

